; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_init_processing.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_init_processing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_processing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_processing() #0 {
  %1 = call i32 (...) @verify_panels()
  %2 = call i32 (...) @init_storage()
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 (...) @set_general_stats()
  br label %7

7:                                                ; preds = %5, %0
  %8 = call i32 (...) @set_spec_date_format()
  ret void
}

declare dso_local i32 @verify_panels(...) #1

declare dso_local i32 @init_storage(...) #1

declare dso_local i32 @set_general_stats(...) #1

declare dso_local i32 @set_spec_date_format(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
